--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,58 +1,60 @@
 version: '3.8'
 
 services:
-  app:
-    build: .
-    container_name: laravel_app
-    restart: unless-stopped
-    working_dir: /var/www/html
+  php:
+    container_name: php_container
+    build: ./docker
+    working_dir: /var/www/html  # ✅ Ensures PHP runs in the correct directory
     volumes:
-      - .:/var/www/html
-    networks:
-      - app_network
+      - .:/var/www/html  # ✅ Mount everything (app, public, vendor, etc.)
     depends_on:
       - db
-
-  db:
-    image: mysql:8.0
-    container_name: mysql_db
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: freelance_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
     networks:
-      - app_network
-    ports:
-      - "3306:3306"
+      - flex-work
 
   nginx:
+    container_name: nginx_container
     image: nginx:latest
-    container_name: nginx
-    restart: unless-stopped
     ports:
-      - "8000:80"
+      - "8080:80"
     volumes:
       - .:/var/www/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - app_network
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - app
+      - php
+    networks:
+      - flex-work
+
+  db:
+    container_name: mysql_container
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: flexwork_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - flex-work
 
   phpmyadmin:
+    container_name: phpmyadmin_container
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
-    restart: unless-stopped
-    environment:
-      PMA_HOST: mysql_db
-      MYSQL_ROOT_PASSWORD: root
+    restart: always
     ports:
       - "8081:80"
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
+    depends_on:
+      - db
     networks:
-      - app_network
+      - flex-work
+
+volumes:
+  db_data:
 
 networks:
-  app_network:
-    driver: bridge
+  flex-work:
